#123 inline sub-sub navigation (not main menu) is hidden by the theme colors: fixed.
git-svn-id: http://svn.youthagora.org/satellite/trunk@213 724f02df-c632-4e49-bb9a-5d3e6873b890

--- a/profiles/satellite/themes/satellite/satellite.css
+++ b/profiles/satellite/themes/satellite/satellite.css
@@ -2,7 +2,6 @@
 body {background: white;}
 #wrapper {background: #76B0CD url(images/layout/wrapper_bg.png) top left repeat-x; }
 fieldset {border:1px solid #d9eaf5; background: transparent url(images/layout/gradient-inner.png) repeat-x scroll 0 0; margin:1em 0;padding:1em;}
-ul.secondary li.active a, ul.secondary li.active a:link, ul.secondary li.active a:visited, ul.secondary li a:hover {  background: url(images/layout/bg-tab.png) repeat-x 0 50%;  color: #fff;}
 #shadow { background: url(images/layout/container_bg.png) top center repeat-y;}
 #shadow-top { background: url(images/layout/shadow_top.png) top center no-repeat;}
 #shadow-footer { background: url(images/layout/footer.png) bottom center no-repeat; }
